2006-01-16 Boris Kirzner <borisk@mainsoft.com>
	* DataTable.cs: Drop dependend indexes on column removal.

2006-01-16  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomDataClassGenerator.cs :
	  When a DataRelation connects the same table as parent and child,
	  generate parent row property as BlahRowParent. Fixed bug #77248.

2006-01-10  Senganal T <tsenganal@novell.com>
	* DataRowCollection.cs
		- Added ListChangedEvent to notify reset of the collection.
	* DataView.cs
		- Subscribes to the ListChangedEvent of DataRowCollection
		Fixes bug #77188

2006-01-09  Senganal T <tsenganal@novell.com>
	* RelatedDataView.cs
	* DataColumn.cs
		- Resolving a name clash in IExpression

2006-01-06  Senganal T <tsenganal@novell.com>
	
	* DataColumn.cs
	* DataColumnCollection.cs
		- Reset the Parameters of DataColumn to Default Values when 
		column is removed from the Table's Collection

2006-01-03  Senganal T <tsenganal@novell.com>

	* DataTable.cs :
		- ParseSortString() : Changed the way the sort string is parsed.
		Using a regex to parse the string.Fixes bug #77104

2005-12-12  Konstantin Triger <kostat@mainsoft.com>

	* DataRow.cs: Added index Updates.
		EndEdit() fixed to first update indices and then AssertConstraints
		based on those indices.
		Added Validate() and AssertConstraints() functions.
	* DataRowCollection.cs: Removed ValidateDataRowInternal().
	* DataTable: Fixed Clear().

2005-12-06  Atsushi Enomoto  <atsushi@ximian.com>

	* CustomDataClassGenerator.cs : (InitializeFields) handle AllowDBNull
	  and DefaultValue as well. Patch by Marek Habersack (bug #76709).

2005-12-01  Miguel de Icaza  <miguel@novell.com>

	* DataSet.cs: Apply patch from Robert Jordan, to fix #76817

2005-11-26  Konstantin Triger <kostat@mainsoft.com>

	* ConflictOption.cs: TARGET_JVM include.

2005-11-11  Senganal T <tsenganal@novell.com>
	
	* ConflictOption.cs (new file)
		- Added ConflictOption Enumeration 
	* DataTableReader.cs
	* IDataRecord2.cs 