@@ -1,3 +1,10 @@
+2006-01-17  Senganal T  <tsenganal@novell.com>
+	
+	* DataRow.cs:
+		ItemArray : Modified to raise RowInTableException only if
+		the concerned row has been removed from the table.Fixes 
+		bug #77267
+
 2006-01-16 Boris Kirzner <borisk@mainsoft.com>
 	* DataTable.cs: Drop dependend indexes on column removal.
 
